feat: added authorization from token scopes
